--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -9,6 +9,13 @@
     background-repeat: no-repeat;
 }
 
+.mission {
+    background-image: url(../public/images/Frame\ 608.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 /* .scroll::before {
     content: '';
     height: 10rem;
