--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -10,14 +10,14 @@
 }
 
 .mission {
-    background-image: url(../public/images/Frame\ 608.svg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 608.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .vision {
-    background-image: url(../public/images/Frame\ 609.svg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 609.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -25,14 +25,14 @@
 
 
 .contact {
-    background-image: url(../public/images/Frame\ 1278.svg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 1278.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .aboutframe {
-    background-image: url(../public//images//Rectangle\ 1168.svg);
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(../public//images//Rectangle\ 1168.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
