--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -32,7 +32,7 @@
 }
 
 .aboutframe {
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(../public//images//Rectangle\ 1168.svg);
+    background-image: url(../public//images//Rectangle\ 1168.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
