--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -12,7 +12,7 @@
 .mission {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 608.svg);
 
-
+}
 .vision {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 609.svg);
 }
