--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -11,15 +11,24 @@
 
 .mission {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 608.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 .vision {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 609.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
 .contact {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../public/images/Frame\ 1278.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
