--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,21 @@
 body {
     font-family: 'Cambay', sans-serif;
 }
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 8rem
+}
+
+html::-webkit-scrollbar {
+    width: .4rem;
+}
+
+html::-webkit-scrollbar-track {
+    background: transparent
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #00072D;
+    border-radius: 5rem
+}
